--- a/stacks/root/docker/web/app/index.html
+++ b/stacks/root/docker/web/app/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
   <h1>Donovan Tengblad</h1>
+  <script type="text/javascript" src="https://cdn.rawgit.com/isobit/websocket-nats/master/dist/websocket-nats.js"></script>
+  <script type="text/javascript" src="js/bundle.js"></script>
 </body>
 </html>
